# lintdata

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lintdata/: __init__.py  accessor.py  checks.py
tests/: test_checks.py
